@@ -439,7 +439,7 @@ public class FixedParamValueService {
 
 			for (Integer userId : users) {
 				if (!userFixedParamValueExists(userId, parameterId, value)) {
-					dbService.update(sql, ArtUtils.getUniqueId(), userId,
+					dbService.update(sql, ArtUtils.getDatabaseUniqueId(), userId,
 							parameterId, value);
 				}
 			}
@@ -453,7 +453,7 @@ public class FixedParamValueService {
 
 			for (Integer userGroupId : userGroups) {
 				if (!userGroupFixedParamValueExists(userGroupId, parameterId, value)) {
-					dbService.update(sql, ArtUtils.getUniqueId(), userGroupId,
+					dbService.update(sql, ArtUtils.getDatabaseUniqueId(), userGroupId,
 							parameterId, value);
 				}
 			}
