@@ -198,6 +198,17 @@ public class ArtUtils {
 	public static String getRandomFileNameString() {
 		return "-" + RandomStringUtils.randomAlphanumeric(5);
 	}
+	
+	/**
+	 * Get random string that can be used as a unique record id
+	 *
+	 * @return unique id string
+	 */
+	public static String getDatabaseUniqueId() {
+		//can potentially use randomUUID but it may block if the server lacks sufficient entropy?
+		//https://stackoverflow.com/questions/14532976/performance-of-random-uuid-generation-with-java-7-or-java-6
+		return System.currentTimeMillis() + "-" + RandomStringUtils.randomAlphanumeric(5);
+	}
 
 	/**
 	 * Get random string that can be used as a unique record id
@@ -207,7 +218,7 @@ public class ArtUtils {
 	public static String getUniqueId() {
 		//can potentially use randomUUID but it may block if the server lacks sufficient entropy?
 		//https://stackoverflow.com/questions/14532976/performance-of-random-uuid-generation-with-java-7-or-java-6
-		return System.currentTimeMillis() + "-" + RandomStringUtils.randomAlphanumeric(5);
+		return System.currentTimeMillis() + "-" + RandomStringUtils.randomAlphanumeric(10);
 	}
 
 	/**
