@@ -10,20 +10,20 @@
 
 <spring:message code="page.message.errorOccurred" var="errorOccurredText" javaScriptEscape="true"/>
 
-<div id="cancelQueryDiv" class="pull-right" style="display:none">
-	<button type="button" id="cancelQuery" data-statement-id="${statementId}">
+<div id="cancelQueryDiv-${runId}" class="pull-right" style="display:none">
+	<button type="button" id="cancelQuery-${runId}">
 		<spring:message code="dialog.button.cancel"/>
 	</button>
 </div>
 
 <script>
-	$("#cancelQuery").on("click", function () {
-		var statementId = $(this).attr("data-statement-id");
+	$("#cancelQuery-${runId}").on("click", function () {
+		var runId = "${runId}";
 
 		$.ajax({
 			type: 'POST',
 			url: '${pageContext.request.contextPath}/cancelQuery',
-			data: {statementId: statementId},
+			data: {runId: runId},
 			error: function (xhr) {
 				//https://stackoverflow.com/questions/6186770/ajax-request-returns-200-ok-but-an-error-event-is-fired-instead-of-success
 				console.log("Error", xhr);
