@@ -2,6 +2,7 @@ ART 4.13
 * Added overwrite option for record import
 * Added German translation (thanks to Carsten Pohle)
 * Show start report on home page if configured
+* Allow cancelling of running queries
 
 ART 4.12.1
 * Fix for error with multi parameter
